@@ -1,0 +1,2 @@
+logicless templating, reuse templates in many programming languages
+including R
